src/test/deca/codegen/valid/convFloat.deca
{
    float x = 1.0;
    int y = 2;
    // println(x + (1 + y*5.0));
    print(x, "   ", y);
}